# OpenVectorFormatToolsCpp

./: .gitmodules  CMakeLists.txt  LICENSE  code_file_header.txt  conanfile.py  conanfile.txt  manage_code_file_headers.py  manage_license_headers.py  readme.md
.github/workflows/: CheckLicenseHeaders.yml
cmake/: ccache.cmake  config_safe_guards.cmake  warnings.cmake
example/: CMakeLists.txt
example/ex1_write/: CMakeLists.txt  main.cc
example/ex2_read/: CMakeLists.txt  main.cc
reader_writer/: CMakeLists.txt
reader_writer/inc/: consts.h  memory_mapping_win32.h  ovf_file_reader.h  ovf_file_writer.h  util.h
reader_writer/src/: ovf_file_reader.cc  ovf_file_writer.cc  util.cc
test/: CMakeLists.txt  test_reader.cc  test_writer.cc
test/resources/: empty.ovf
test_package/: CMakeLists.txt  conanbuildinfo.txt  conanfile.py  conaninfo.txt  graph_info.json
test_package/src/: example.cpp
